# template

./: .pre-commit-config.yaml  .pylintrc  README.md  environment.yaml  pyproject.toml
.github/workflows/: semantic_release.yaml
